--- a/Resturants/StroyBoard/Profile.storyboard
+++ b/Resturants/StroyBoard/Profile.storyboard
@@ -580,7 +580,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="JLn-g7-dpW">
-                                                <rect key="frame" x="16" y="296.99999999999989" width="361" height="1491.333333333333"/>
+                                                <rect key="frame" x="16" y="296.99999999999989" width="361" height="1691.333333333333"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amin Kitchen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTX-7T-Bga">
                                                         <rect key="frame" x="0.0" y="0.0" width="361" height="24.333333333333332"/>
@@ -835,19 +835,19 @@
                                                             </collectionView>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="XtL-X9-T77">
-                                                        <rect key="frame" x="0.0" y="578" width="361" height="67"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="XtL-X9-T77">
+                                                        <rect key="frame" x="0.0" y="586" width="361" height="84"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0A-PU-Krr">
-                                                                <rect key="frame" x="0.0" y="0.0" width="361" height="0.0"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="361" height="17"/>
                                                                 <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                 <color key="textColor" name="ColorWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kkc-2v-H6N">
-                                                                <rect key="frame" x="0.0" y="12" width="361" height="55"/>
+                                                                <rect key="frame" x="0.0" y="29" width="361" height="55"/>
                                                                 <subviews>
-                                                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c2Z-8C-KsT">
+                                                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="248" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c2Z-8C-KsT">
                                                                         <rect key="frame" x="16" y="0.0" width="339" height="55"/>
                                                                         <color key="tintColor" name="ColorLightGray"/>
                                                                         <color key="textColor" name="ColorWhite"/>
@@ -882,17 +882,17 @@
                                                             </view>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="m0v-Qg-TPX">
-                                                        <rect key="frame" x="0.0" y="578" width="361" height="67"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="m0v-Qg-TPX">
+                                                        <rect key="frame" x="0.0" y="686" width="361" height="84"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add website" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNR-Gj-enV">
-                                                                <rect key="frame" x="0.0" y="0.0" width="361" height="0.0"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="361" height="17"/>
                                                                 <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                 <color key="textColor" name="ColorWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-2H-2OP">
-                                                                <rect key="frame" x="0.0" y="12" width="361" height="55"/>
+                                                                <rect key="frame" x="0.0" y="29" width="361" height="55"/>
                                                                 <subviews>
                                                                     <textField opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add website" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5vj-uB-3aQ">
                                                                         <rect key="frame" x="16" y="0.0" width="339" height="55"/>
@@ -930,7 +930,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ho8-ju-yvE">
-                                                        <rect key="frame" x="0.0" y="586" width="361" height="84"/>
+                                                        <rect key="frame" x="0.0" y="786" width="361" height="84"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add phone number" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3k-R6-dlW">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="17"/>
@@ -977,7 +977,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="LYp-ft-7VN">
-                                                        <rect key="frame" x="0.0" y="686" width="361" height="151"/>
+                                                        <rect key="frame" x="0.0" y="886" width="361" height="151"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="GhL-0x-jZM">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="84"/>
@@ -1128,7 +1128,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="nJm-z8-XUa">
-                                                        <rect key="frame" x="0.0" y="845" width="361" height="67"/>
+                                                        <rect key="frame" x="0.0" y="1045" width="361" height="67"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Day" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpq-Eq-vGx">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="0.0"/>
@@ -1190,7 +1190,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jMp-93-D69">
-                                                        <rect key="frame" x="0.0" y="853" width="361" height="567.33333333333348"/>
+                                                        <rect key="frame" x="0.0" y="1053" width="361" height="567.33333333333348"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="prh-JQ-gK1">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="67.333333333333329"/>
@@ -2238,7 +2238,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="233-JY-CIA">
-                                                        <rect key="frame" x="0.0" y="1436.3333333333333" width="361" height="55"/>
+                                                        <rect key="frame" x="0.0" y="1636.3333333333333" width="361" height="55"/>
                                                         <color key="backgroundColor" name="ColorWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="55" id="fiP-MX-Cqq"/>
